Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34012

QFileDialog hangs and can't select any files

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.8.6
    • 4.8.5
    • None
    • Qt4.8.5 and Mac 10.9GM
    • 07ecdc01a2b369fe330d723af1a00845c0932834

      For Qt4.8.5 and Mac 10.9GM

      My code:
      QString t_strFilePath = QFileDialog::getOpenFileName(this,
      "Open",the dir parameter,"Image Files (*.png)");

      1. Enable application sandbox

      • Bug: The QFileDialog hangs sometimes.
      • Bug: All files of the filedialog view is disable,
        you can't select any files(include *.png).

      2. Disable application sandbox

      • Everything is ok

        1. dialog.cpp
          1 kB
          sword726
        2. 001.png
          224 kB
          sword726
        3. 002.png
          188 kB
          sword726
        4. entitlements.plist
          0.3 kB
          sword726
        5. test.zip
          3 kB
          sword726
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dedietri Gabriel de Dietrich (drgvond)
            sword726 sword726
            Votes:
            2 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes