Cocoa File Dialog: Remove sandbox-ufriendly QDir::entryList() call

QDir::entryList() uses QDirIterator, which itself uses QFileSystemEngine,
and whose backend uses POSIX API in a relatively liberal way.

This is a backport of Qt 5's Ia872b9b1244f7b390d173a498011379b9309b3c6.

Task-number: QTBUG-34012
Change-Id: I0a17359510e7623b4ee53dd86bb5bdc39785600e
Reviewed-by: Morten Johan Sørvig <morten.sorvig@digia.com>